--- a/app/templates/categorychanges.erb
+++ b/app/templates/categorychanges.erb
@@ -1,37 +1,34 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="zh">
-    <head>
-       <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-       <title><%= category %></title>
-       <!-- Framework CSS -->
-       <link rel="stylesheet" href="/styles/blueprint/screen.css" type="text/css" media="screen, projection">
-       <link rel="stylesheet" href="/styles/blueprint/print.css" type="text/css" media="print">
-       <!--[if lt IE 8]><link rel="stylesheet" href="/styles/blueprint/ie.css" type="text/css" media="screen, projection"><![endif]-->
-
-       <link rel="stylesheet" href="/styles/style.css" type="text/css" media="screen" charset="utf-8" />
-    <body>
-    <div class="container">
-
-       <h2 id="title" class="span-24 last"><%= category %></h2>
-
-       <div class="span-6 colborder">
-       <h3 id="title" class="span-6">最近更新</h3>
-       <ul id="changes" class="span-6">
-       <% for(var ind in changes) { var change = changes[ind]; %>
-         <li><%= change.rc_timestamp.toString().split(' ')[4] %>&nbsp;&nbsp;<a href="/r/<%= lang %>/<%= change.rc_page_id.toString(36) %>"><%= change.rc_title %></a></li>
-       <% } %>
-       </ul>
-       </div>
-
-       <div class="span-6 colborder">
-       <h3 id="talks" class="span-6">最近讨论</h3>
-       <ul id="talks" class="span-6">
-       <% for(var ind in talks) { var talk = talks[ind]; %>
-         <li><%= talk.rc_timestamp.toString().split(' ')[4] %>&nbsp;&nbsp;<a href="/r/<%= lang %>/<%= talk.rc_page_id.toString(36) %>"><%= talk.rc_title %></a></li>
-       <% } %>
-       </ul>
-       </div>
-   </div>
-   </body>
+  <head>
+     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+     <title><%= msg[lang]['recentchanges'] %> : <%= category %></title>
+     <link rel="stylesheet" href="/styles/style.css" type="text/css" media="screen" charset="utf-8" />
+  <body>
+  <div id="langs"> [&nbsp;
+  <% for(var ind in langs) { var l = langs[ind]; %>
+    <% if(services.isSupported(l, 'rc')) { %><a href="/<%= l %>/rc"><%= l %></a>&nbsp;<% } %>
+  <% } %>
+  ] </div>
+  <h2 id="title"><%= msg[lang]['recentchanges'] %> : <%= category %></h2>
+  <div id="recentchanges">
+  <h3><%= msg[lang]['recentchanges'] %></h3>
+  <ul id="changes">
+  <% for(var ind in changes) { var change = changes[ind]; %>
+    <li><%= change.rc_timestamp.toString().split(' ')[4] %>&nbsp;&nbsp;<a href="/r/<%= lang %>/<%= change.rc_page_id.toString(36) %>"><%= change.rc_title %></a></li>
+  <% } %>
+  </ul>
+  </div>
+  <div id="recenttalks">
+  <h3><%= msg[lang]['recenttalks'] %></h3>
+  <ul id="talks">
+  <% for(var ind in talks) { var talk = talks[ind]; %>
+    <li><%= talk.rc_timestamp.toString().split(' ')[4] %>&nbsp;&nbsp;<a href="/r/<%= lang %>/<%= talk.rc_page_id.toString(36) %>"><%= talk.rc_title %></a></li>
+  <% } %>
+  </ul>
+  </div>
+  <div id="supcategory"></div>
+  <div id="subcategory"></div>
+ </body>
 </html>
 
