category changes via api

--- a/app/templates/categorychanges.erb
+++ b/app/templates/categorychanges.erb
@@ -1,9 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="zh">
-  <head>
-     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-     <title><%= msg[lang]['recentchanges'] %> : <%= category %></title>
-     <link rel="stylesheet" href="/styles/style.css" type="text/css" media="screen" charset="utf-8" />
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="<%= lang %>" lang="<%= lang %>" dir="<%= dir %>">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title><%= msg[lang]['recentchanges'] %> : <%= category %></title>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" charset="utf-8">var lang="<%= lang %>", host = "<%= baseUrl %>", category = "<%= category %>", subcat = "<%= subcat %>", supcat = "<%= supcat %>", notfound = "<%= msg[lang]['notfound'] %>";</script>
+    <script src="/javascripts/application.js" type="text/javascript" charset="utf-8"></script>
+    <link rel="stylesheet" href="/styles/style.css" type="text/css" media="screen" charset="utf-8" />
   <body>
   <div id="langs"> [&nbsp;
   <% for(var ind in langs) { var l = langs[ind]; %>
@@ -29,6 +32,7 @@
   </div>
   <div id="supcategory"></div>
   <div id="subcategory"></div>
+  <script type="text/javascript" charset="utf-8">$(cc);</script>
  </body>
 </html>
 
