--- a/app/templates/unsupported.erb
+++ b/app/templates/unsupported.erb
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="/styles/style.css" type="text/css" media="screen" charset="utf-8" />
     </head>
     <body>
-       <h2 id="title">Unsupported Language <%= lang %></h2>
+       <h2 id="title">Unsupported Language <%= variant %></h2>
        <div id="helpus">
        <p>If you are interested in localizing this small service, please:
        <ul>
