--- a/app/templates/problem.erb
+++ b/app/templates/problem.erb
@@ -2,11 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="<%= lang %>" lang="<%= lang %>" dir="<%= dir %>">
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title><%= msg[lang]['problem'] %></title>
+    <title><%= msg[variant]['problem'] %></title>
     <link rel="stylesheet" href="/styles/style.css" type="text/css" media="screen" charset="utf-8" />
 </head>
 <body>
-    <h2 id="title"><%= msg[lang]['problem'] %></h2>
+    <h2 id="title"><%= msg[variant]['problem'] %></h2>
     <p id="team">by <a href="http://github.com/mountain/shortify">Shortify</a></p>
 </body>
 </html>
