--- a/app/templates/recentchanges.erb
+++ b/app/templates/recentchanges.erb
@@ -2,9 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="<%= lang %>" lang="<%= lang %>" dir="<%= dir %>">
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title><%= msg[lang]['recentchanges'] %></title>
+    <title><%= msg[variant]['recentchanges'] %></title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-    <script type="text/javascript" charset="utf-8">var lang="<%= lang %>", host = "<%= baseUrl %>", notfound = "<%= msg[lang]['notfound'] %>";</script>
+    <script type="text/javascript" charset="utf-8">var lang="<%= lang %>", variant ="<%= variant%>", host = "<%= baseUrl %>", notfound = "<%= msg[variant]['notfound'] %>";</script>
     <link rel="stylesheet" href="/styles/style.css" type="text/css" media="screen" charset="utf-8" />
 </head>
 <body>
@@ -13,11 +13,11 @@
       <% if(services.isSupported(l, 'rc')) { %><a href="/<%= l %>/rc"><%= l %></a>&nbsp;<% } %>
     <% } %>
     ] </div>
-    <h2 id="title"><%= msg[lang]['recentchanges'] %></h2>
-    <div id="querybox"><%= msg[lang]['category'] %>&nbsp;
-    <input id="query" type=text value="<%= msg[lang]['math'] %>">
-    <input id="submit" type=submit value="<%= msg[lang]['submit'] %>"></div>
-    <p id="team"><%= msg[lang]['byfor'] %></p>
+    <h2 id="title"><%= msg[variant]['recentchanges'] %></h2>
+    <div id="querybox"><%= msg[variant]['category'] %>&nbsp;
+    <input id="query" type=text value="<%= msg[variant]['math'] %>">
+    <input id="submit" type=submit value="<%= msg[variant]['submit'] %>"></div>
+    <p id="team"><%= msg[variant]['byfor'] %></p>
     <script src="/javascripts/application.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" charset="utf-8">$(rc);</script>
 </body>
