--- a/app/templates/unknown.erb
+++ b/app/templates/unknown.erb
@@ -1,13 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="<%= lang %>" lang="<%= lang %>" dir="<%= dir %>">
     <head>
        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>Unsupported Language</title>
+        <title> msg[variant]['unknowncategory'] </title>
         <link rel="stylesheet" href="/styles/style.css" type="text/css" media="screen" charset="utf-8" />
     </head>
     <body>
-       <h2 id="title">Unknow Category</h2>
-       <p id="team">by <a href="http://github.com/mountain/shortify">Shortify</a></p>
+       <h2 id="title"><%= msg[variant]['unknowncategory'] %></h2>
+       <p id="team"><%= msg[variant]['byfor'] %></p>
     </body>
 </html>
 
