--- a/app/templates/userdiscussions.erb
+++ b/app/templates/userdiscussions.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="zh">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="<%= lang %>" lang="<%= lang %>" dir="<%= dir %>">
   <head>
      <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-     <title><%= msg[lang]['userdiscussions'] %> : <%= user %></title>
+     <title><%= msg[variant]['userdiscussions'] %> : <%= user %></title>
      <link rel="stylesheet" href="/styles/style.css" type="text/css" media="screen" charset="utf-8" />
   <body>
   <div id="langs"> [&nbsp;
@@ -10,11 +10,11 @@
     <% if(services.isSupported(l, 'n')) { %><a href="/<%= l %>/n"><%= l %></a>&nbsp;<% } %>
   <% } %>
   ] </div>
-  <h2 id="title"><%= msg[lang]['userdiscussions'] %> : <%= user %></h2>
+  <h2 id="title"><%= msg[variant]['userdiscussions'] %> : <%= user %></h2>
   <div id="userdiscussions">
   <ul id="discussions">
   <% for(var ind in discussions) { var discuss = discussions[ind]; %>
-    <li><%= discuss.rc_timestamp.toString().split(' ')[4] %>&nbsp;&nbsp;<a href="/r/<%= lang %>/<%= discuss.rc_page_id.toString(36) %>"><%= discuss.ntf_talk_title %></a></li>
+    <li><%= discuss.rc_timestamp.toString().split(' ')[4] %>&nbsp;&nbsp;<a href="/r/<%= variant%>/<%= discuss.rc_page_id.toString(36) %>"><%= discuss.ntf_talk_title %></a></li>
   <% } %>
   </ul>
   </div>
