--- a/app/templates/notifications.erb
+++ b/app/templates/notifications.erb
@@ -17,7 +17,7 @@
     <h2 id="title"><%= msg[variant]['notifications'] %></h2>
     <div id="querybox"><%= msg[variant]['user'] %>&nbsp;
     <input id="query" type=text value="Jimbo">
-    <input id="submit" type=submit value="<%= msg[variant]['submit'] %>"></div>
+    <input id="submit" type=submit value="<%= msg[variant]['submit'] %>"><a href="/<%= variant %>"><%= msg[variant]['moreservices'] %></a></div>
     <p id="team"><%= msg[variant]['byfor'] %></p>
     <script type="text/javascript" charset="utf-8">$(n);</script>
 </body>
