--- a/app/templates/recentchanges.erb
+++ b/app/templates/recentchanges.erb
@@ -15,8 +15,8 @@
     ] </div>
     <h2 id="title"><%= msg[variant]['recentchanges'] %></h2>
     <div id="querybox"><%= msg[variant]['category'] %>&nbsp;
-    <input id="query" type=text value="<%= msg[variant]['math'] %>">
-    <input id="submit" type=submit value="<%= msg[variant]['submit'] %>"></div>
+    <input id="query" type=text value="<%= msg[variant]['catdemo'] %>">
+    <input id="submit" type=submit value="<%= msg[variant]['submit'] %>"><a href="/<%= variant %>"><%= msg[variant]['moreservices'] %></a></div>
     <p id="team"><%= msg[variant]['byfor'] %></p>
     <script src="/javascripts/application.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" charset="utf-8">$(rc);</script>
