--- a/app/templates/shorturl.erb
+++ b/app/templates/shorturl.erb
@@ -17,7 +17,7 @@
     <h2 id="title"><%= msg[variant]['shorturl'] %></h2>
     <div id="querybox"><%= msg[variant]['lable'] %>&nbsp;
     <input id="query" type=text value="<%= msg[variant]['wiki'] %>">
-    <input id="submit" type=submit value="<%= msg[variant]['shorten'] %>"></div>
+    <input id="submit" type=submit value="<%= msg[variant]['shorten'] %>"><a href="/<%= variant %>"><%= msg[variant]['moreservices'] %></a></div>
     <div id="result"></div>
     <p id="team"><%= msg[variant]['byfor'] %></p>
     <script type="text/javascript" charset="utf-8">$(s);</script>
