--- a/app/templates/unsupported.erb
+++ b/app/templates/unsupported.erb
@@ -8,16 +8,16 @@
     <body>
        <h2 id="title">Unsupported Language <%= variant %></h2>
        <div id="helpus">
-       <p>If you are interested in localizing this small service, please:
+       <p>If you are interested in localizing these small services, please:
        <ul>
-         <li>Fork <a href="http://github.com/mountain/shortify">our repository</a> at github;</li>
-         <li>Localize <a href="http://github.com/mountain/shortify/blob/master/config/i18n.js">this file</a>;</li>
+         <li>Fork <a href="http://github.com/mountain/ultrafilter">our repository</a> at github;</li>
+         <li>Localize <a href="http://github.com/mountain/ultrafilter/blob/master/config/i18n.js">this file</a>;</li>
          <li><a href="http://help.github.com/forking/">Commit your patch to us</a>!</li>
        </ul>
        Thank you very much!
        </p>
        </div>
-        <p id="team">by <a href="http://github.com/mountain/shortify">Shortify</a></p>
+        <p id="team">by <a href="http://github.com/mountain/ultrafilter">Ultrafilter</a></p>
     </body>
 </html>
 
